objects/JBCXM__CTA__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call To Actions</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Age__c</fullName>
        <formula>IF(ISNULL(JBCXM__ClosedDate__c), (TODAY() -  JBCXM__CreatedDate__c) , JBCXM__ClosedDate__c -  JBCXM__CreatedDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__AlertReference__c</fullName>
        <label>Alert Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__CTAGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTA Group</label>
        <referenceTo>JBCXM__CTAGroup__c</referenceTo>
        <relationshipLabel>CallToAction</relationshipLabel>
        <relationshipName>CallToAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective Category</label>
        <referenceTo>JBCXM__GSMetaInfo__c</referenceTo>
        <relationshipLabel>Objective</relationshipLabel>
        <relationshipName>Objective</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__CloseSource__c</fullName>
        <label>Close source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__DSRecommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GS Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__DSScoreReason__c</fullName>
        <label>GS Score Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__DSScore__c</fullName>
        <label>GS Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__DSScoredOn__c</fullName>
        <label>GS Score Updated On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__DisplayOrder__c</fullName>
        <label>Template Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__DynamicData__c</fullName>
        <label>Dynamic data info</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <defaultValue>&quot;ACCOUNT&quot;</defaultValue>
        <label>EntityType</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__EventReference__c</fullName>
        <label>Event Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__FinalMilestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Milestone</label>
        <referenceTo>JBCXM__Milestone__c</referenceTo>
        <relationshipLabel>Final Milestone</relationshipLabel>
        <relationshipName>FinalMilestone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSClosedOverdue__c</fullName>
        <formula>IF( JBCXM__ClosedDate__c &gt;  JBCXM__DueDate__c , TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSClosedTaskCount__c</fullName>
        <formula>JBCXM__TaskCount__c -  JBCXM__OpenTaskCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysDue__c</fullName>
        <formula>JBCXM__OriginalDueDate__c -  JBCXM__CreatedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysPastDueDate__c</fullName>
        <formula>IF( JBCXM__DueDate__c &lt; TODAY() , TODAY() - JBCXM__DueDate__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past Due Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysToClose__c</fullName>
        <formula>IF( ISBLANK(JBCXM__ClosedDate__c) ,  TODAY() -  JBCXM__CreatedDate__c , JBCXM__ClosedDate__c - JBCXM__CreatedDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDaysUntilClose__c</fullName>
        <formula>IF(ISBLANK( JBCXM__ClosedDate__c ),  JBCXM__DueDate__c - TODAY() , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSDueDateVariance__c</fullName>
        <formula>JBCXM__OriginalDueDate__c -  JBCXM__DueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Date Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSOverdueType__c</fullName>
        <formula>IF( JBCXM__Stage__r.JBCXM__IncludeInWidget__c , IF( JBCXM__DueDate__c - TODAY() &lt; 0, &quot;Overdue&quot;, IF(JBCXM__DueDate__c - TODAY() &gt; 7, &quot;Open&quot;, &quot;Due next 7 days&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSOverdue__c</fullName>
        <formula>IF( JBCXM__DueDate__c &lt; TODAY() , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSPercentComplete__c</fullName>
        <formula>IF(  JBCXM__TaskCount__c == 0 ,  IF( JBCXM__Stage__r.JBCXM__IncludeInWidget__c , 0,1) , JBCXM__GSClosedTaskCount__c /  JBCXM__TaskCount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JBCXM__GroupId__c</fullName>
        <label>GroupId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsAssignedToGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAssignedToGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsClosed__c</fullName>
        <formula>JBCXM__Stage__r.JBCXM__IncludeInWidget__c = false</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsFlagged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flagged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRecurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsSnoozed__c</fullName>
        <formula>IF(JBCXM__SnoozedUntil__c &gt;= NOW(), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snoozed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__MileStoneEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MileStoneEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>JBCXM__Milestone__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpenTaskCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__OriginalDueDate__c</fullName>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call To Action ParentId</label>
        <referenceTo>JBCXM__CTA__c</referenceTo>
        <relationshipLabel>Call To Actions</relationshipLabel>
        <relationshipName>CallToActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playbook</label>
        <referenceTo>JBCXM__Playbook__c</referenceTo>
        <relationshipLabel>Call To Action</relationshipLabel>
        <relationshipName>Call_To_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Priority__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Priority</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Call To Actions (PickList)</relationshipLabel>
        <relationshipName>CTAPriority</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Properties__c</fullName>
        <label>Properties</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Reason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Call To Actions (PickList)</relationshipLabel>
        <relationshipName>CTAReason</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>CTA Relationship Type</relationshipLabel>
        <relationshipName>CTAGSRelationshipType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>JBCXM__GSRelationship__c</referenceTo>
        <relationshipLabel>CallToAction</relationshipLabel>
        <relationshipName>CallToAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RuleActionId__c</fullName>
        <label>Rule Action Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__SnoozeReason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Snooze Reason</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Call To Action (Snooze Reason)</relationshipLabel>
        <relationshipName>Call_To_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SnoozedOn__c</fullName>
        <label>Snoozed on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__SnoozedUntil__c</fullName>
        <label>SnoozedUntil</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JBCXM__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Rules</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipLabel>Call To Actions</relationshipLabel>
        <relationshipName>CTAStage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__SuccessCriteria__c</fullName>
        <label>Success Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__TaskCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Task Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__TypeName__c</fullName>
        <description>Type Name (auto populated)</description>
        <formula>JBCXM__Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Type Name (For Notifications)</inlineHelpText>
        <label>Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTA Type</label>
        <referenceTo>JBCXM__CTATypes__c</referenceTo>
        <relationshipLabel>Call To Action</relationshipLabel>
        <relationshipName>CallToAction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Call To Action</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Call To Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call To Action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>